--- a/inventory.ini
+++ b/inventory.ini
@@ -2,13 +2,13 @@
 localhost
 
 [redis]
-redis.eshwar.fun
+localhost
 
 [mysql]
-mysql.eshwar.fun
+localhost
 
 [rabbitmq]
-rabbitmq.eshwar.fun
+localhost
 
 [catalogue]
 catalogue.eshwar.fun
