--- a/inventory.ini
+++ b/inventory.ini
@@ -11,22 +11,22 @@ localhost
 localhost
 
 [catalogue]
-catalogue.eshwar.fun
+localhost
 
 [cart]
-cart.eshwar.fun
+localhost
 
 [user]
-user.eshwar.fun
+localhost
 
 [shipping]
-shipping.eshwar.fun
+localhost
 
 [payment]
-payment.eshwar.fun
+localhost
 
 [frontend]
-frontend.eshwar.fun
+localhost
 
 [local]
 localhost
