--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -3,7 +3,7 @@
     name: common
     tasks_from: app-setup.yml
 
-- name: app setup
+- name: nodejs setup
   ansible.builtin.import_role:
     name: common
     tasks_from: nodejs.yml
