--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -20,7 +20,7 @@
     state: present
 
 - name: connnect to mongodb catalogue
-  ansible.builtin.command: mongosh mongodb.eshwar.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
+  ansible.builtin.command: mongosh mongodb-{{ env }}.eshwar.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
   register: catalogue_output
 
 
