--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -29,7 +29,7 @@
 #     msg: "{{ catalogue_output }}"
 
 - name: load products into mongodb
-  ansible.builtin.shell: mongosh --host mongodb.eshwar.fun </app/db/master-data.js
+  ansible.builtin.shell: mongosh --host mongodb-{{ env }}.eshwar.fun </app/db/master-data.js
   when: catalogue_output.stdout | int < 0
 
 - name: systemd setup
