--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -20,16 +20,15 @@
   community.mysql.mysql_db:
     state: import
     name: all
-    login_host: "{{ MYSQL_HOST }}"
-    login_user: "{{ MYSQL_ROOT_USER }}"
-    login_password: "{{ MYSQL_ROOT_PASSWORD }}"
+    login_host: mysql-dev.eshwar.fun
+    login_user: root
+    login_password: RoboShop@1
     target: "{{ item }}"
   loop:
   - /app/db/schema.sql
   - /app/db/app-user.sql 
   - /app/db/master-data.sql
-  become: yes
-  become_user: root
+  
 
 - name: systemd setup
   ansible.builtin.import_role:
